methods.slug.SlugHunting.scala.code
def hunt() {
  while (isFacingTRail()){
    while (estSurBiscuit()){
      forward()
      baisseBrosse()
      leveBrosse()
    }
  }
  prendBiscuit()  
}

def isFacingTrail():Boolean = {
  while (!estSurBiscuit){
    if (!estFaceMur){
      forward()
      if (getGroundColor()==Color.green){
        backward ; return true
      }
      else 
        backward()
        left()
    }
    else 
      left()
    }
  return true
  }